fix professional-services nav bar overflow on medium screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -250,3 +250,6 @@ span {
 .appointmentform .forminput {
   @apply !rounded-md;
 }
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
